# azooKey-Windows

./: .gitignore  Cargo.toml  download-deps.ps1
.github/workflows/: actions.yml
crates/client/src/: lib.rs  trace.rs
crates/client/src/engine/: composition.rs  ipc_service.rs
crates/client/src/tsf/: text_input_proccesor.rs
crates/server/src/: lib.rs  main.rs
crates/shared/: service.proto
crates/shared/src/: lib.rs
crates/ui/src/: main.rs
frontend/src/: main.tsx
frontend/src-tauri/: tauri.conf.json
frontend/src-tauri/src/: lib.rs
frontend/src/components/: app-sidebar.tsx
frontend/src/pages/: dictionary.tsx
installer/: Installer.iss
scripts/: IMEv2.ahk  convert_atok.py  ctrl-ime.ahk  rebuild-deploy.ps1
server-swift/: Package.resolved  Package.swift
server-swift/Sources/azookey-server/: azookey_server.swift
server-swift/Sources/ffi/include/: ffi.h
